--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-switch": "^1.1.0",
@@ -28,7 +29,10 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "date-fns": "^3.6.0",
+    "react-day-picker": "^8.10.1",
     "react-number-format": "^5.4.4",
+    "recharts": "^2.10.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
