--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.544.0",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.57.4",
     "@radix-ui/react-alert-dialog": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.0",
-    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-select": "^2.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.4",
     "@types/pg": "^8.15.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "date-fns": "^3.6.0",
     "react-day-picker": "^8.10.1",
+    "react-dom": "19.1.0",
     "react-number-format": "^5.4.4",
     "recharts": "^2.10.5",
     "tailwind-merge": "^3.3.1"
@@ -41,6 +41,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "postcss": "^8.5.6",
