--- a/rn-app/Prizely/package.json
+++ b/rn-app/Prizely/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
