Adiciona novos campos de pagamento e notificações ao modelo de clientes
- Inclui campos para rastrear o pagamento do sinal e a venda paga, além de uma data de lembrete para contato.
- Atualiza a API para manipular os novos campos em requisições GET e POST.
- Modifica a tabela de clientes e o modal para exibir informações sobre o pagamento do sinal e status da venda.
- Implementa um sistema de notificações para leads com lembretes de contato.
- Adiciona scripts de backup e documentação para gerenciamento de banco de dados no Supabase.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ next-env.d.ts
 docs/leads-ac-tattoo.csv
 *storybook.log
 storybook-static
+
+# Supabase backups (mantém estrutura, ignora arquivos)
+supabase/backups/*.sql
+supabase/backups/*.dump
+supabase/backups/backup.log
+!supabase/backups/README.md
