--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "rn-app"]
+  "exclude": ["node_modules", "rn-app", "src/stories", "vitest.config.ts"]
 }
