--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "react-number-format": "^5.4.4",
     "recharts": "^2.10.5",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "tesseract.js": "^6.0.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
